Table users {
  id bigint [pk, increment]
  name varchar [not null]
  email varchar [not null, unique]
  password_digest varchar [not null]
  role integer [not null, default: 2, note: '0: admin | 1: collaborator | 2: resident']
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table blocks {
  id bigint [pk, increment]
  identifier varchar [not null, unique]
  floors_count integer [not null]
  units_per_floor integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table units {
  id bigint [pk, increment]
  block_id bigint [not null, ref: > blocks.id]
  floor_number integer [not null]
  unit_number integer [not null]
  identifier varchar [not null]
  created_at datetime [not null]
  updated_at datetime [not null]

  indexes {
    (block_id, floor_number, unit_number) [unique]
  }
}

Table unit_residents {
  id bigint [pk, increment]
  unit_id bigint [not null, ref: > units.id]
  user_id bigint [not null, ref: > users.id]
  created_at datetime [not null]
  updated_at datetime [not null]

  indexes {
    (unit_id, user_id) [unique]
  }
}

Table ticket_types {
  id bigint [pk, increment]
  title varchar [not null]
  sla_hours integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table ticket_statuses {
  id bigint [pk, increment]
  name varchar [not null]
  is_default boolean [not null, default: false]
  is_final boolean [not null, default: false]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table tickets {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  unit_id bigint [not null, ref: > units.id]
  ticket_type_id bigint [not null, ref: > ticket_types.id]
  ticket_status_id bigint [not null, ref: > ticket_statuses.id]
  description text [not null]
  closed_at datetime
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table ticket_status_histories {
  id bigint [pk, increment]
  ticket_id bigint [not null, ref: > tickets.id]
  ticket_status_id bigint [not null, ref: > ticket_statuses.id]
  user_id bigint [not null, ref: > users.id]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table comments {
  id bigint [pk, increment]
  ticket_id bigint [not null, ref: > tickets.id]
  user_id bigint [not null, ref: > users.id]
  body text [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table collaborator_ticket_types {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  ticket_type_id bigint [not null, ref: > ticket_types.id]
  created_at datetime [not null]
  updated_at datetime [not null]

  indexes {
    (user_id, ticket_type_id) [unique]
  }
}
